feat: new styling

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ input[type=submit] {
 }
 
 body {
-    background-image: url("../backgrounds/space wallpaper.jpg");
+    background-image: url("backgrounds/space wallpaper.jpg");
     padding-bottom: 400px;
     background-size: 1920px 1080px;
     height: 100%;
