feat: new styling

--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ input[type=submit] {
 }
 
 body {
-    background-image: url("./backgrounds/space wallpaper.jpg");
-    padding-bottom: 450px;
+    background-image: url("../backgrounds/space wallpaper.jpg");
+    padding-bottom: 400px;
     background-size: 1920px 1080px;
     height: 100%;
     background-position: center;
