--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ input[type=submit] {
     right: 20%;
     left: 20%;
     width: 60%;
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(255, 255, 255, 0.5);
     border-radius: 10px 10px 0 0;
 }
 
@@ -68,6 +68,21 @@ input[type=submit] {
     position: relative;
 }
 
+.up {
+    bottom: 15px;
+    right: 15px;
+    margin-left: 17px;
+}
+
+.rest {
+    left: 10px;
+}
+
+
+#reddit {
+    bottom: 15px;
+    right: 15px;
+}
 
 .body {
     height: 100%;
