--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
+
 .headers {
     font-family: 'Open Sans', sans-serif;
     font-size: 40px;
@@ -20,6 +21,13 @@
     position: absolute;
     top: 3px;
     left: 10px;
+}
+
+#theInspirationalQuote {
+    font-size: 40px;
+    position: relative;
+    top: 300px;
+    margin: auto;
 }
 
 .search {
