--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
 .headers {
     font-family: 'Open Sans', sans-serif;
     font-size: 40px;
     text-align: center;
     color: white;
-    text-shadow: 2px 2px black;
+    text-shadow: 2px 2px 4px black;
 }
 
 #theGreeting {
-    text-shadow: 1px 2px black;
     font-size: 40px;
     position: relative;
     bottom: 10px;
@@ -24,38 +24,45 @@
 }
 
 #theInspirationalQuote {
-    font-size: 40px;
+    font-size: 20px;
+    width: 1000px;
+    -webkit-text-stroke: 0.2px black;
     position: relative;
     top: 300px;
     margin: auto;
+    padding: 10px;
+    text-shadow: 4px 4px 7px black;
+    background: rgba(148, 150, 153, 0.5);
 }
 
 .search {
     text-align: center;
     position: absolute;
-    bottom: 450px;
+    bottom: 500px;
     left: 400px;
-
 }
 
 input[type=text] {
     position: relative;
-
+    height: 30px;
     padding: 15px 20px;
     font-family: "Lucida Sans Unicode", serif;
-    border-color: black;
-    border-radius: 100px;
-    box-shadow: 0 4px 7px 0 rgba(25, 26, 27, 0.28);
-}
-
-input[type=text]:active {
-    background: unset;
+    border: initial;
+    border-radius: 75px;
+    box-shadow: 0 4px 7px 0 rgba(25, 26, 27, 0.5);
 }
 
 input[type=submit] {
-    background-color: whitesmoke;
-    padding: 12px 30px;
-    font-family: "Lucida Sans Unicode", serif;
+    background-color: initial;
+    border: initial;
+    z-index: -1;
+    position: relative;
+    font-size: 30px;
+    height: 55px;
+    width: 4em;
+    margin-left: -35px;
+    top: 7px;
+    padding: 15px;
     border-radius: 13px;
 }
 
